package com.digitaltherapyassistant.dto.response.session;

public class SessionSummary {
    
}
